@@ -6590,6 +6590,11 @@ public:
 // Binary ops
 
 class AstLogOr final : public AstNodeBiop {
+    // LOGOR with optional side effects
+    // Side effects currently used in some V3Width code
+    // TBD if this concept is generally adopted for side-effect tracking
+    // versus V3Const tracking it itself
+    bool m_sideEffect = false;  // Has side effect, relies on short-circuiting
 public:
     AstLogOr(FileLine* fl, AstNode* lhsp, AstNode* rhsp)
         : ASTGEN_SUPER_LogOr(fl, lhsp, rhsp) {
@@ -6602,6 +6607,11 @@ public:
     virtual void numberOperate(V3Number& out, const V3Number& lhs, const V3Number& rhs) override {
         out.opLogOr(lhs, rhs);
     }
+    virtual bool same(const AstNode* samep) const override {
+        const AstLogOr* const sp = static_cast<const AstLogOr*>(samep);
+        return m_sideEffect == sp->m_sideEffect;
+    }
+    virtual void dump(std::ostream& str = std::cout) const override;
     virtual string emitVerilog() override { return "%k(%l %f|| %r)"; }
     virtual string emitC() override { return "VL_LOGOR_%nq%lq%rq(%nw,%lw,%rw, %P, %li, %ri)"; }
     virtual string emitSimpleOperator() override { return "||"; }
@@ -6611,6 +6621,9 @@ public:
     virtual bool sizeMattersLhs() const override { return false; }
     virtual bool sizeMattersRhs() const override { return false; }
     virtual int instrCount() const override { return widthInstrs() + INSTR_COUNT_BRANCH; }
+    virtual bool isPure() const override { return !m_sideEffect; }
+    void sideEffect(bool flag) { m_sideEffect = flag; }
+    bool sideEffect() const { return m_sideEffect; }
 };
 class AstLogAnd final : public AstNodeBiop {
 public:
